update: api friend
