# internal/router/v1/friend_router.go
@@ -14,7 +14,7 @@ func InitFriendRouter(
 	middleware middleware.Middleware,
 	friendUseCase friend.FriendUseCase,
 ) {
-	// Get all friends
+	// Get all friends with optional pagination (page and limit)
 	router.GET("/", middleware.Authentication, func(c *gin.Context) {
 		friendHandler.GetFriends(c, friendUseCase)
 	})
